--- a/source/water/panes/panes.html
+++ b/source/water/panes/panes.html
@@ -5,6 +5,7 @@
 			<div class="panesMapContainer" geo-map configuration="data.map">
 			    <geo-extent></geo-extent>
 			</div>
+         <water-regions></water-regions>
     		<div geo-draw data="data.map.drawOptions" line-event="elevation.plot.data" rectangle-event="bounds.drawn"></div>
     		<div icsm-tabs class="icsmTabs"  ng-class="{'icsmTabsClosed':!view, 'icsmTabsOpen':view}"></div>
 		</div>
