Add some more post work

--- a/source/positioning/dialog/dialog.html
+++ b/source/positioning/dialog/dialog.html
@@ -37,6 +37,7 @@
       <div ng-if="state.extension == 'shp'">
          <shp-file state="state" settings="settings" />
       </div>
+      <transformation-target state="state"></transformation-target>
       <accept-epsg4283 state="state"></accept-epsg4283>
    </div>
    <div ng-show="state.file">
