--- a/source/positioning/progress/progresscsv.html
+++ b/source/positioning/progress/progresscsv.html
@@ -11,6 +11,9 @@
          <span style="padding-right:10px" uib-tooltip="Add information about your file." tooltip-placement="left">
             <i class="fa fa-file-text-o fa-lg" ng-class="{'ed-valid': state.validFileInfo, 'ed-invalid': !state.validFileInfo}"></i>
          </span>
+         <span style="padding-right:10px" uib-tooltip="Select a transformation." tooltip-placement="left">
+            <i class="fa fa-cogs fa-lg" ng-class="{'ed-valid': state.transformation, 'ed-invalid': !state.transformation}"></i>
+         </span>
          <span style="padding-right:10px" uib-tooltip="Provide an email address." tooltip-placement="left">
             <i class="fa fa-envelope fa-lg" ng-class="{'ed-valid': state.validEmail, 'ed-invalid': !state.validEmail}"></i>
          </span>
