--- a/source/icsm/splash/splash.html
+++ b/source/icsm/splash/splash.html
@@ -48,7 +48,7 @@
 	</div>
    <div style="padding:30px; padding-top:0; padding-bottom:40px; width:100%">
 		<div class="pull-right">
-		  	<button type="button" class="btn btn-primary" ng-model="seenSplash" ng-focus="" ng-click="accept()">Continue</button>
+		  	<button type="button" class="btn btn-primary" ng-model="seenSplash" ng-click="accept()" autofocus>Continue</button>
 		</div>
 	</div>
 </div>
