--- a/source/placenames/results/item.html
+++ b/source/placenames/results/item.html
@@ -12,29 +12,31 @@
       </div>
    </div>
 </div>
-<div ng-if="!vm.feature" style="padding:20px 10px 130px;"><i class="fa-spinner fa-spin fa fa-lf"></i>Loading full data&hellip;</div>
+<div ng-if="!vm.feature" style="padding:20px 10px 130px;">
+   <i class="fa-spinner fa-spin fa fa-lf"></i>Loading full data&hellip;
+</div>
 <div class="container-fluid" ng-if="vm.feature">
    <div class="row" ng-if="vm.feature.attributes.Variant_Name">
       <div class="col-md-4">Variant Name</div>
       <div class="col-md-8">{{vm.feature.attributes.Variant_Name | pnSplitBar}}</div>
    </div>
-   <div class="row">
+   <div class="row" ng-if="vm.feature.attributes">
       <div class="col-md-4">State</div>
       <div class="col-md-8">{{vm.feature.attributes.State}}</div>
    </div>
    <div class="row">
       <div class="col-md-4">Feature Type</div>
-      <div class="col-md-8">{{vm.feature.attributes.Feature_code | pnFeature}}</div>
+      <div class="col-md-8">{{vm.item.featureCode | pnFeature}}</div>
    </div>
    <div class="row">
       <div class="col-md-4">Classification</div>
-      <div class="col-md-8">{{vm.feature.attributes.Classification}}</div>
+      <div class="col-md-8">{{vm.item.classification}}</div>
    </div>
-   <div class="row">
+   <div class="row" ng-if="vm.feature.attributes">
       <div class="col-md-4">CGDN</div>
       <div class="col-md-8">{{vm.feature.attributes.CGDN}}</div>
    </div>
-   <div class="row">
+   <div class="row" ng-if="vm.feature.attributes">
       <div class="col-md-4">Concise Gazetteer</div>
       <div class="col-md-8">{{vm.feature.attributes.Concise_gaz}}</div>
    </div>
@@ -44,9 +46,9 @@
    </div>
    <div class="row">
       <div class="col-md-4">Authority</div>
-      <div class="col-md-8">{{vm.feature.attributes.Authority_ID}}</div>
+      <div class="col-md-8">{{vm.item.authority}}</div>
    </div>
-   <div class="row">
+   <div class="row" ng-if="vm.feature.attributes">
       <div class="col-md-4">Status Description</div>
       <div class="col-md-8">{{vm.feature.attributes.Status_desc}}</div>
    </div>
@@ -66,11 +68,29 @@
       </div>
    </div>
 
-   <div class="row" ng-if="!vm.feature.attributes.Lat_minutes">
+   <div class="row" ng-if="!vm.feature.noData && !vm.feature.attributes.Lat_minutes">
       <div class="col-md-4">Latitude</div>
       <div class="col-md-8">
          <span class="pn-numeric">
             {{vm.feature.attributes.Latitude}}&deg;
+         </span>
+      </div>
+   </div>
+
+   <div class="row" ng-if="vm.feature.noData ">
+      <div class="col-md-4">Latitude</div>
+      <div class="col-md-8">
+         <span class="pn-numeric">
+            {{vm.item.location | itemLongitude}}&deg;
+         </span>
+      </div>
+   </div>
+
+   <div class="row" ng-if="vm.feature.noData ">
+      <div class="col-md-4">Latitude</div>
+      <div class="col-md-8">
+         <span class="pn-numeric">
+            {{vm.item.location | itemLatitude}}&deg;
          </span>
       </div>
    </div>
@@ -88,17 +108,21 @@
          {{vm.feature.attributes.Longitude}}&deg;</span></div>
    </div>
 
-   <div class="row" ng-if="!vm.feature.attributes.Long_minutes">
+   <div class="row" ng-if="!vm.feature.noData && !vm.feature.attributes.Long_minutes">
       <div class="col-md-4">Longitude</div>
       <div class="col-md-8">
          <span class="pn-numeric">
          {{vm.feature.attributes.Longitude}}&deg;</span></div>
    </div>
-   <div class="row" style="padding-top:5px; padding-bottom:5px; background-color:#f8f8ff;border-top:1px solid #f0f0f0">
+   <div class="row pn-item-footer" ng-if="vm.feature.attributes">
       <div class="col-md-12">Download as:
          <span class="pull-right">
             [<a href"javascript:void()" ng-click="vm.download('wfs')">WFS Get Feature</a>]
          </span>
       </div>
+   </div>
+   <div class="row pn-item-footer" ng-if="vm.feature.noData">
+      <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+      We found no further metadata for this dataset. At a future time further metadata may be available.
    </div>
 </div>
