Update labels on tabs

--- a/source/icsm/panes/tabs.html
+++ b/source/icsm/panes/tabs.html
@@ -2,7 +2,7 @@
 <div id="panesTabsContainer" class="paneRotateTabs" style="opacity:0.9" ng-style="{'right' : contentLeft +'px'}">
 
    <div class="paneTabItem" ng-class="{'bold': view == 'download'}" ng-click="setView('download')">
-      <button class="undecorated">Download</button>
+      <button class="undecorated">Datasets Download</button>
    </div>
    <!--
 	<div class="paneTabItem" ng-class="{'bold': view == 'search'}" ng-click="setView('search')">
@@ -13,7 +13,7 @@
 	</div>
    -->
    <div class="paneTabItem" ng-class="{'bold': view == 'downloader'}" ng-click="setView('downloader')">
-      <button class="undecorated">Elvis</button>
+      <button class="undecorated">Products Download</button>
    </div>
    <div class="paneTabItem" ng-class="{'bold': view == 'glossary'}" ng-click="setView('glossary')">
       <button class="undecorated">Glossary</button>
