--- a/source/water/vector/popup.html
+++ b/source/water/vector/popup.html
@@ -3,7 +3,7 @@
 		<div class="row">
   			<div class="col-md-12">
 				<h4><common-wms data="vdl.data.item"></common-wms>
-					<a href="http://www.ga.gov.au/metadata-gateway/metadata/record/{{vdl.data.item.sysId}}" target="_blank"><strong class="ng-binding">{{vdl.data.item.title}}</strong></a>
+					<a href="https://ecat.ga.gov.au/geonetwork/srv/eng/search#!{{vdl.data.item.primaryId}}" target="_blank"><strong class="ng-binding">{{vdl.data.item.title}}</strong></a>
 				</h4>
    			</div>
 		</div>
