--- a/source/water/select/doc.html
+++ b/source/water/select/doc.html
@@ -8,8 +8,8 @@
 		<common-wms data="doc"></common-wms>
 		<common-bbox data="doc" ng-if="doc.showExtent"></common-bbox>
 		<common-cc></common-cc>
-		<common-metaview url="'http://www.ga.gov.au/metadata-gateway/metadata/record/' + doc.sysId + '/xml'" container="select" item="doc"></common-metaview>
-		<a href="http://www.ga.gov.au/metadata-gateway/metadata/record/{{doc.sysId}}" target="_blank" ><strong>{{doc.title}}</strong></a>
+		<common-metaview url="'https://ecat.ga.gov.au/geonetwork/srv/eng/search#!' + doc.primaryId + '/xml'" container="select" item="doc"></common-metaview>
+		<a href="https://ecat.ga.gov.au/geonetwork/srv/eng/search#!{{doc.primaryId}}" target="_blank" ><strong>{{doc.title}}</strong></a>
 	</span>
 	<span ng-class="{ellipsis:!expanded}" style="width:100%;display:inline-block;padding-right:15px;">
 		{{doc.abstract}}
