--- a/source/water/vector/vector.html
+++ b/source/water/vector/vector.html
@@ -11,8 +11,8 @@
          <div ng-class-odd="'odd'" ng-class-even="'even'" style="padding-left:12px" ng-mouseleave="vect.lolight(doc)" ng-mouseenter="vect.hilight(doc)" >
             <span style="width:100%;display:inline-block;padding-bottom:8px">
                <input type="checkbox" class="vector-checkbox" ng-model="doc.selected">
-		         <common-metaview url="'http://www.ga.gov.au/metadata-gateway/metadata/record/' + doc.sysId + '/xml'" container="select" item="doc"></common-metaview>
-		         <a href="http://www.ga.gov.au/metadata-gateway/metadata/record/{{doc.sysId}}" target="_blank" tooltip-append-to-body="true"
+		         <common-metaview url="'https://ecat.ga.gov.au/geonetwork/srv/eng/search#!' + doc.primaryId + '/xml'" container="select" item="doc"></common-metaview>
+		         <a href="https://ecat.ga.gov.au/geonetwork/srv/eng/search#!{{doc.primaryId}}" target="_blank" tooltip-append-to-body="true"
                            uib-tooltip="{{doc.abstract}}" tooltip-placement="auto bottom" tooltip-class="vector-tooltip">
                   <strong>{{doc.title}}</strong>
                </a>
