--- a/source/icsm/panes/tabs.html
+++ b/source/icsm/panes/tabs.html
@@ -1,6 +1,9 @@
 <!-- tabs go here -->
 <div id="panesTabsContainer" class="paneRotateTabs" style="opacity:0.9" ng-style="{'right' : contentLeft +'px'}">
 
+   <div class="paneTabItem" style="width:60px; opacity:0">
+
+   </div>
    <div class="paneTabItem" ng-class="{'bold': view == 'download'}" ng-click="setView('download')">
       <button class="undecorated">Datasets Download</button>
    </div>
