--- a/source/icsm/results/results.html
+++ b/source/icsm/results/results.html
@@ -9,7 +9,7 @@
          <h4 style="display:inline-block">Found {{products.length | number:0}} datasets</h4>
       </div>
    </div>
-   <div class="panel panel-default" style="margin-bottom: 5px; margin-top: 5px;">
+   <div class="panel panel-default" style="margin-bottom: 5px; margin-top: 0;">
       <div class="panel-body" style="float:clear">
          <span class="filter-text" style="float:left;width:50%">
             <div class="input-group input-group-sm">
