--- a/source/icsm/clip/clip.html
+++ b/source/icsm/clip/clip.html
@@ -10,7 +10,15 @@
 				</div>
 				<exp-info title="Selecting an area" show-close="true" style="width:450px;position:fixed;top:200px;right:40px" is-open="showInfo">
 					<icsm-info-bbox></icsm-info-bbox>
-				</exp-info>
+            </exp-info>
+            <div class="row" ng-hide="(!clip.xMin && clip.xMin !== 0) || oversize" style="padding-top:7px;">
+               <div class="col-md-12 ng-binding">
+                  Selected bounds: {{clip.xMin | number : 4}}° west,
+                     {{clip.yMax | number : 4}}° north,
+                     {{clip.xMax | number : 4}}° east,
+                     {{clip.yMin | number : 4}}° south
+               </div>
+            </div>
 			</div>
 		</div>
 	</div>
