Update QLD metadata strategy for metadata_id and metadata_url

--- a/source/positioning/file/file.html
+++ b/source/positioning/file/file.html
@@ -5,8 +5,7 @@
          This Geoscience Australia FME Web Service is provided to give spatial data software users and developers a
          system to check their datum transformations with a standard. It can be used to transform data that references
          the Geocentric Datum of Australia 1994 (GDA94) to data referenced on the
-         Geocentric Datum of Australia 2020 (GDA2020).  It may also be used to check transformations
-         from older Australian datums; Australian Geodetic Datum 1966 (AGD66) and AGD84, to GDA94.
+         Geocentric Datum of Australia 2020 (GDA2020).
          <br/><br/>
          <file-drop state="root.state" />
 
