--- a/source/icsm/results/results.html
+++ b/source/icsm/results/results.html
@@ -29,7 +29,7 @@
 
    <div ng-repeat="available in list" class="well" style="padding-left:4px;padding-right:4px" ng-show="list.someMatches(available)"
       ng-controller="listCtrl as list">
-      <icsm-org-heading org="available" expansions="expansions" mappings="mappings" products="products"></icsm-org-heading>
+      <icsm-org-heading org="available" mappings="mappings"></icsm-org-heading>
       <div>
          <div class="listRow" ng-class-odd="'listEven'" ng-repeat="(typeKey, types) in available.downloadables | allowedTypes" ng-show="types | hasTypeMatches">
             <span>
@@ -49,33 +49,10 @@
                         </button>
                      </h5>
                   </div>
-                  <div ng-if="expansions[available.source + '_' + key]">
-                     <div ng-repeat="item in items | matchedItems" icsm-abstract-hover item="item">
-                        <div tooltip-append-to-body="true" uib-tooltip-template="'icsm/results/abstracttooltip.html'" tooltip-popup-delay="400" data-ng-mouseenter="show(item)"
-                           data-ng-mouseleave="hide(item)">
-                           <input type="checkbox" ng-model="item.selected" />
-                           <icsm-abstract item="item"></icsm-abstract>
-                           <common-cc version="mappings[item.source].ccLicence"></common-cc>
-                           <span class="listItem" item="item" icsm-abstract-link></span>
-                           <span ng-show="item.file_size" style="float:right;padding-top:3px">({{item.file_size | fileSize}})</span>
-                        </div>
-                        <div ng-show="item.showAbstract" class="well">
-                           <span ng-show="!item.metadata">
-                              <i class="fa fa-spinner fa-spin fa-lg fa-fw"></i>
-                              <span>Loading metadata...</span>
-                           </span>
-                           <div ng-show="item.metadata.abstract">
-                              <strong>{{item.metadata.title}}</strong> -
-                              <span class="icsm-abstract-body" ng-bind-html="item.metadata.abstractText"></span>
-                           </div>
-                           <div ng-show="!item.metadata.abstract">
-                              <i class="fa fa-lg fa-exclamation-triangle" style="color:orange"></i>
-                              There is no abstract available for this dataset.
-                           </div>
-                        </div>
-                     </div>
+                  <div ng-show="expansions[available.source + '_' + key]">
+                     <subtype items="items" mappings="mappings" show="show" hide="hide"></subtype>
                      <div style="text-align:right">
-                        <button class="undecorated" ng-click="expansions[available.source + '_' + key] = false">[collapse]</button>
+                        <button class="undecorated" ng-click="visible = false">[collapse]</button>
                      </div>
                   </div>
                </div>
